--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <html>
 <head>
 	<title>MOC</title>
+	<link rel="stylesheet" href="css/header.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<div class="container">
-		<div class="row">
-			<img class="img-responsive" src="images/logo.png">
+	<div id="header">
+		<div class="container">
+			<div class="logo">
+				<img class="wing" src="images/wing-left.png">
+				<img class="logo-moc" src="images/logo.png">
+				<img class="wing" src="images/wing-right.png">
+			</div>
 		</div>
 	</div>
 </body>
