--- a/index.html
+++ b/index.html
@@ -2,19 +2,32 @@
 <head>
 	<title>MOC</title>
 	<link rel="stylesheet" href="css/header.css">
+	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+	<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+	<script src="js/all-template.js"></script>
 </head>
 <body>
 	<div id="header">
 		<div class="container">
-			<div class="logo">
-				<img class="wing" src="images/wing-left.png">
+			<div class="centered-table" id="owl-click">
+				<div class ="pull-left left-nav navigation">
+					<a class="nav-link" href ="/home/"><div class ="pull-left nav-select">HOME</div></a>
+					<a class="nav-link" href ="/team/"><div class ="pull-left nav-select">TEAM</div></a>
+				</div>
+				<img class="left-wing wing" src="images/wing-left.png">
 				<img class="logo-moc" src="images/logo.png">
-				<img class="wing" src="images/wing-right.png">
+				<img class="right-wing wing" src="images/wing-right.png">
+				<div class ="pull-right right-nav navigation">
+					<a class="nav-link" href ="/blog/"><div class ="pull-left nav-select">BLOG</div></a>
+					<a class="nav-link" href ="/contact/"><div class ="pull-left nav-select">CONTACT</div></a>
+				</div>
 			</div>
 		</div>
+	</div>
+	<div id="main">
 	</div>
 </body>
 </html>
