--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 <head>
 	<title>MOC</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/header.css">
 	<link rel="stylesheet" href="css/animate.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+	
 	<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
@@ -28,6 +29,13 @@
 		</div>
 	</div>
 	<div id="main">
+		<div class="container">
+			<div class="col-xs-12 col-sm-6 pull-left give-border">NEWS AND BLOG</div>
+			<div class="col-xs-12 col-sm-6 pull-right give-border">TEAM </div>
+			<div class="clearfix"></div>
+			<div class="col-xs-12 col-sm-6 pull-left give-border">PROJECT</div>
+			<div class="col-xs-12 col-sm-6 pull-right give-border">CONTACT</div>
+		</div>
 	</div>
 </body>
 </html>
